--- a/LF08_A8/.classpath
+++ b/LF08_A8/.classpath
@@ -7,6 +7,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="resources/mysql-connector-java-5.1.42-bin.jar"/>
+	<classpathentry kind="lib" path="resources/mysql-connector-java-8.0.29.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
